--- a/static/style.css
+++ b/static/style.css
@@ -15,13 +15,14 @@
 }
 #navbar li a:hover{
     color: black;
-    font-size: 20px;
+    font-size: 28px;
     font-family: Verdana, Geneva, Tahoma, sans-serif, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
-ul{
+#ul{
     display: flex;
-    background-color: rgb(235, 107, 107);
+    background-color: rgb(159, 13, 243);
+    border-radius: 10px;
     height: 56px;
     align-items: center;
     justify-content: center;
@@ -29,84 +30,34 @@ ul{
 }
 #introsection{
 
-    background: center/cover no-repeat url("/static/bg.jpg") ;
+    
     height: 500px;
     display: flex;
     flex-direction: column;
-    background-color: aqua;
+    background-color: rgb(0, 140, 255);
     color: rgb(255, 255, 255);
     text-align: center;
-    justify-content: center;
+    /* justify-content: center; */
     font-size: 2rem;
     font-family: 'Nunito', sans-serif;
     
 }
-.small{
-    font-size: 1rem;
-}
 
-
-.form-group{
-    font-size: 21px;
-}
-.field{
-    font-size:2rem
-}
-.sbt:hover{
-    cursor: pointer;
-}
-/* mission section */
-#missionsection{
-    height: 450px;
-    display: block;
-    text-align: center;
-    font-size:3rem ;
-    font-family: 'Roboto Mono', monospace;
-}
-.card{
-    display: flex;
-    border: 2px solid black;
-    margin: 20px;
-    height: 100px;
-    font-size: 2rem;
-    border-radius: 45px;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(221, 116, 221);
-    color: whitesmoke;
-}
-#missionsection h3 {
-    text-align: center;
-}
 /* palying with the images */
 #mainlogo{
     height: 40px;
 }
-#sptitle{
-    text-align: center;
-    font-weight: bold;
-    font-size: 2rem;
-    font-family: 'Roboto Mono', monospace;
-}
-#sponsorsection{
-    height: 300px;
-    display: flex;
-    background-color: rgb(241, 207, 207);
-    justify-content: center;
-    font-size: 30px;
-    font-family: 'Roboto Mono', monospace;
-}
-.img{
-    height: 150px;
-    margin: 20px;
-}
+
 /* footer section */
 footer{
-    height:40px;
+    position: absolute;
+    bottom: 0%;
+    display: flex;
+    height: 66px;
     background-color: gray;
     text-align: center;
     padding-top: 10px;
-
+    left: 45%;
 }
 /* Style for contact us page */
 #contact{
@@ -133,6 +84,7 @@ footer{
     left: 54px;
     cursor: pointer;
 }
+/* login button style */
 #login-btn{
     width: 220px;
     height: 50px;
@@ -193,3 +145,118 @@ footer{
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+/* To do list css */
+/* Include the padding and border in an element's total width and height */
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Remove margins and padding from the list */
+  #myUL {
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Style the list items */
+  #myUL>li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: rgb(3, 64, 114);
+    font-size: 18px;
+    transition: 0.2s;
+  
+    /* make the list items unselectable */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Set all odd list items to a different color (zebra-stripes) */
+  #myUL li:nth-child(odd) {
+    background: #000000;
+  }
+  
+  /* Darker background-color on hover */
+  #myUL>li:hover {
+    background: #ddd;
+  }
+  
+  /* When clicked on, add a background color and strike out text */
+  #myUL>li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+  }
+  
+  /* Add a "checked" mark when clicked on */
+  #myUL>li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+  }
+  
+  /* Style the close button */
+  .close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+  }
+  
+  .close:hover {
+    background-color: #f44336;
+    color: white;
+  }
+  
+  /* Style the header */
+  .header {
+    background-color: #f44336;
+    padding: 30px 40px;
+    color: white;
+    text-align: center;
+  }
+  
+  /* Clear floats after the header */
+  .header:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the input */
+  #myInput {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+  }
+  
+  /* Style the "Add" button */
+  .addBtn {
+    padding: 5px;
+    width: 200px;
+    background: black;
+    color: whitesmoke;
+    float: left;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 10px;
+  }
+  
+  .addBtn:hover {
+    background-color: rgb(18, 247, 18);
+  }
