--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,64 +1,55 @@
-
-<link rel="stylesheet" href="/static/style.css"/>
+<link rel="stylesheet" href="/static/style.css" />
 <nav id="navbar">
-  <ul><img id="mainlogo" src="/static/img/logo.png" alt="alt"/>
+  <ul id="ul">
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- linking index.js in static -->
+    <script src="../static/index.js"></script>
+
     <li><a href="/home">Home</a></li>
     <li><a href="/about">about</a></li>
     <li><a href="/services">services</a></li>
-    <li><a href="/class-info">class info</a></li>
     <li><a href="/contact">contact us</a></li>
     <li><a href="/signup" id="login-btn">login/signup</a></li>
   </ul>
 </nav>
 <section id="introsection">
-  <div>welcome to DancexAcademy</div>
-  <div class="small">Eat Sleep Danceuuu Repeatuuu</div>
-  <div class="field">
-    <fieldset>
-      <legend>pick your favourite Dance Style
-        <form action="action">
-          <div class="form-group">
-            <label for="pop">pop
-              <input class="form-control" id="name" type="radio" name="pop"/>
-            </label>
-          </div>
-          <div class="form-group">
-            <label for="salsa">salsa
-              <input class="form-control" id="name" type="radio" name="pop"/>
-            </label>
-          </div>
-          <div class="form-group">
-            <label for="classical">classical
-              <input class="form-control" id="name" type="radio" name="pop"/>
-            </label>
-          </div>
-          <div class="sbt">
-            <input class="form-control" id="name" type="submit" name="submit" value="submit"/>
-          </div>
-        </form>
-      </legend>
-    </fieldset>
+  <h2>Welcome to TimeMachine</h2>
+  <h3>your time is in your hand</h3>
+  <div id="myDIV" class="header">
+    <h2>Enter Something to manage</h2>
+    <div id="timer">
+      <input type="text" id="myInput" placeholder="Enter your task" />
+      
+      <span onclick="newElement()" class="addBtn">Add task
+      
+    </span>
+    </div>
   </div>
+
+  <ul id="myUL"><li>
+    <div>
+        <span id="hour">00</span>:<span id="minute">00</span>:<span id="second">00</span>:<span id="millisecond">000</span>
+      </div>
+    
+      <br />
+      <button type="button" name="start" class="btn btn-success" onclick="start()">Start</button>
+      <button type="button" name="pause" class="btn btn-danger" onclick="pause()">end</button>
+      <button type="button" name="reset" class="btn btn-primary" onclick="reset()">Reset</button>
+    </li>
+  </ul>
+
+  <!-- <footer>copyrights © Iconic</footer> -->
 </section>
-<section id="missionsection">our mission
-  <div class="card">
-    <img src="/static/img/1.png" alt="alt" srcset="" width="70px" height="60px" id="goal-img">
-      <p> Dance the Most</p>
-  </div>
-  <div class="card">
-    <img src="/static/img/2.png" alt="alt" srcset="" width="70px" height="60px" id="goal-img">
-      <p> Feel the Most</p>
-  </div>
-  <div class="card">
-    <img src="/static/img/3.png" alt="alt" srcset="" width="70px" height="60px" id="goal-img">
-      <p> Win the Most</p>
-  </div>
-</section>
-<section id="sptitle">our sponsors</section>
-<section id="sponsorsection">
-  <div class="images"><img class="img" src="/static/img/logo1.png" alt="alt"/></div>
-  <div class="images"><img class="img" src="/static/img/logo2.png" alt="alt"/></div>
-  <div class="images"><img class="img" src="/static/img/logo3.png" alt="alt"/></div>
-  <div class="images"><img class="img" src="/static/img/logo4.png" alt="alt"/></div>
-</section>
-<footer>copyrights © Iconic</footer>
